--- a/public/framer/style.css
+++ b/public/framer/style.css
@@ -11,7 +11,7 @@ body {
 	font: 28px/1em "Helvetica";
 	color: #FFF;
 	overflow: hidden;
-	cursor: url('images/cursor.png') 39 39, auto;
+	cursor: url('') 39 39, auto;
 }
 
 a {
